feat(v0.5): PR-3 dashboard geo toggle/filter/sort + explain

--- a/docs/releases/v0.5.md
+++ b/docs/releases/v0.5.md
@@ -35,3 +35,28 @@ The formal SSOT path is fixed to:
 - `config/geo_profiles_v1.json`
 
 Legacy root-level `geo_profiles_v1.json` is migration-only history and should not be used by runtime defaults.
+
+## v0.5 PR-3 Scope (UI-only)
+
+This PR adds dashboard interaction controls for geo fields without changing any backend compute path.
+
+- Adds chain-level geo controls in `dashboard_v04.html` output:
+  - geo column toggle
+  - profile filter
+  - gate filter
+  - `geo_factor > 0` filter
+  - sort selector (`default`, `tw_rank_score`, `geo_factor`, `boosted_push`)
+- Adds explain expansion for:
+  - `geo_factor_explain_json`
+  - `tw_rank_explain_json`
+
+## PR-3 Non-Interference
+
+PR-3 does not change:
+
+- `build_chain_matrix_v10.py` compute semantics
+- `src/geo_factor.py` formulas
+- DB schema or migrations
+- default SQL ordering semantics (`default` mode preserves original order)
+
+PR-3 is a render-layer usability/readability enhancement only.
