test(v0.5): add PR-4 geo acceptance lock

--- a/docs/releases/v0.5.md
+++ b/docs/releases/v0.5.md
@@ -60,3 +60,24 @@ PR-3 does not change:
 - default SQL ordering semantics (`default` mode preserves original order)
 
 PR-3 is a render-layer usability/readability enhancement only.
+
+## v0.5 PR-4 (Acceptance)
+
+Run v0.5 acceptance (geo scenarios + non-interference):
+
+```bash
+python scripts/run_acceptance_v05.py
+```
+
+Optional:
+
+```bash
+python scripts/run_acceptance_v05.py --skip-v04-hash
+python scripts/run_acceptance_v05.py --output-root output/acceptance_v05
+```
+
+Notes:
+
+- Uses `input/snapshots.geo.sample.jsonl` (TW / nearby / none).
+- Validates v0.5 geo fields + explain contracts.
+- Ensures v0.4 acceptance summary hash remains unchanged.
