新增觀察模式相關文檔及每週運作規則，更新代理設定以支援觀察模式

--- a/README
+++ b/README
@@ -55,3 +55,15 @@ python run_pipeline_50.py --output-dir output --half-life-days 7 --geo-profile t
 
 - `python scripts/clean_output.py`
 - `python scripts/clean_output.py --nuke`
+# Weekly Rhythm
+
+Monday
+- Snapshot collection (automatic)
+
+Friday
+- Promote latest acceptance to output/latest
+
+End of Month
+- Full pipeline run
+- Release tag
+- Archive outputs
